--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <h1>Curriculum</h1> 
    <hr>
-   <embed src="./img/LuisFellipe_SilvaFerrazGarcia_CV (1).pdf" 
+   <embed src="img/LuisFellipe_SilvaFerrazGarcia_CV (1).pdf" 
    type="application/pdf" width="90%" height="90%">
     
 </body>
